[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["B4TRUH4 <matveybond2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.112.0"}
pydantic-settings = "^2.4.0"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
passlib = "^1.7.4"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
fastapi-filter = {extras = ["sqlalchemy"], version = "^2.0.0"}
fastapi-pagination = "^0.12.26"
aiohttp = "^3.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
